#50 use scss variables for colors, ad fix  layout issues

--- a/_sass/beakerx/_base.scss
+++ b/_sass/beakerx/_base.scss
@@ -2,17 +2,8 @@
   box-sizing: border-box;
 }
 
-:root {
-  --bx-color-orange-dark: #e44f0c;
-  --bx-color-orange-light: #e37222;
-  --bx-color-orange: #e46017;
-  --bx-color-white: #ffffff;
-  --bx-color-gray-dark: #4b4f51;
-  --bx-color-gray-light: #c3c3c3;
-}
-
 body {
-  background-color: var(--bx-color-orange-dark);
+  background-color: $color-orange-dark;
 }
 
 code {
@@ -20,19 +11,19 @@ code {
   display: block;
 
   .home & {
-    background-color: var(--bx-color-orange-light);
-    border: var(--bx-color-orange-dark) 1px solid;
+    background-color: $color-orange-light;
+    border: $color-orange-dark 1px solid;
   }
 
   .pages-wrapper & {
-    background-color: var(--bx-color-orange-dark);
+    background-color: $color-orange-dark;
     border: var(--bx-color-gray-light) 1px solid;
   }
 }
 
 hr {
   .pages-wrapper & {
-    border-top: 1px solid var(--bx-color-white);
+    border-top: 1px solid $color-white;
     border-bottom: 0;
     border-left: 0;
     border-right: 0;
@@ -51,7 +42,7 @@ hr {
     }
 
     &:before {
-      border-color: var(--bx-color-white) transparent transparent transparent;
+      border-color: $color-white transparent transparent transparent;
       border-width: 30px 30px 0 30px;
       left: 0;
       top: 0;
@@ -60,38 +51,38 @@ hr {
     &:after {
       left: 2px;
       top: 0;
-      border-color: var(--bx-color-orange-light) transparent transparent transparent;
+      border-color: $color-orange-light transparent transparent transparent;
       border-width: 28px 28px 0 28px;
     }
   }
 }
 
 .home {
-  background-color: var(--bx-color-orange);
+  background-color: $color-orange;
 }
 
 .page-header {
-  background-color: var(--bx-color-orange-light);
+  background-color: $color-orange-light;
 }
 
 .pages-navigation {
-  background-color: var(--bx-color-orange-dark);
+  background-color: $color-orange-dark;
 }
 
 .pages-wrapper {
-  background-color: var(--bx-color-orange-light);
+  background-color: $color-orange-light;
 }
 
 .pages__item_index {
   h1, h2, h3, h4, h5, h6 {
     + p {
-      border-bottom: 30px solid var(--bx-color-orange-dark);
+      border-bottom: 30px solid $color-orange-dark;
     }
   }
 }
 
 .page-footer {
-  background-color: var(--bx-color-orange-dark);
+  background-color: $color-orange-dark;
 }
 
 @media (min-width: 961px) {
@@ -101,7 +92,7 @@ hr {
       &:after {
         border: 30px solid transparent;
         border-bottom-width: 0;
-        border-top-color: var(--bx-color-orange-dark);
+        border-top-color: $color-orange-dark;
         bottom: -29px;
         content: "";
         display: block;
